# sim-codecs

./: BROCHURE.md  CONTRIBUTING.md  Cargo.toml  README.md  features.toml  release-plz.toml
crates/sim-codec/: BROCHURE.md  Cargo.toml  README.md
crates/sim-codec-algol/: BROCHURE.md  Cargo.toml  README.md
crates/sim-codec-algol/recipes/: book.toml
crates/sim-codec-algol/recipes/01-basics/: chapter.toml
crates/sim-codec-algol/src/: encode.rs  lib.rs  parse.rs  pratt.rs  runtime.rs  tests.rs
crates/sim-codec-algol/src/parse/: origin.rs  rewrite.rs  state.rs  tokenize.rs
crates/sim-codec-algol/src/pratt/: parser.rs  table.rs
crates/sim-codec-binary-base64/: BROCHURE.md  Cargo.toml  README.md
crates/sim-codec-binary-base64/recipes/: book.toml
crates/sim-codec-binary-base64/recipes/01-basics/: chapter.toml
crates/sim-codec-binary-base64/src/: base64.rs  codec.rs  cookbook.rs  lib.rs  tests.rs
crates/sim-codec-bitwise-base64/: BROCHURE.md  Cargo.toml  README.md
crates/sim-codec-bitwise-base64/recipes/: book.toml
crates/sim-codec-bitwise-base64/recipes/01-basics/: chapter.toml
crates/sim-codec-bitwise-base64/src/: codec.rs  cookbook.rs  lib.rs  tests.rs
crates/sim-codec-bridge/: BROCHURE.md  Cargo.toml  README.md
crates/sim-codec-bridge/recipes/: book.toml
crates/sim-codec-bridge/recipes/01-basics/: chapter.toml
crates/sim-codec-bridge/src/: call.rs  canonical.rs  collab.rs  frame_book.rs  frame_render.rs  identity.rs  lib.rs  line.rs  move_book.rs  ownership.rs  packet.rs  part_book.rs  profile.rs  render.rs  shape.rs  tests.rs  validation_tests.rs  warrant.rs  weave.rs
crates/sim-codec-bridge/src/tests/: support.rs
crates/sim-codec-chat/: BROCHURE.md  Cargo.toml  README.md
crates/sim-codec-chat/recipes/: book.toml
crates/sim-codec-chat/recipes/01-basics/: chapter.toml
crates/sim-codec-chat/src/: base64.rs  canonical.rs  cookbook.rs  expr.rs  helpers.rs  lib.rs  ollama.rs  output_grammar.rs  parts.rs  tests.rs
crates/sim-codec-chat/src/providers/: anthropic.rs  lemonade.rs  lm_studio.rs  mod.rs  model_params.rs  openai.rs  openai_compat.rs  profile.rs
crates/sim-codec-chat/src/tests/: anthropic.rs  ollama.rs  openai_compat.rs  output_grammar.rs  strict.rs
crates/sim-codec-compare/: BROCHURE.md  Cargo.toml  README.md
crates/sim-codec-compare/recipes/: book.toml
crates/sim-codec-compare/recipes/01-basics/: chapter.toml
crates/sim-codec-compare/src/: corpus.rs  findings_tests.rs  lib.rs  report.rs  size.rs  speed.rs  speed_smoke_tests.rs
crates/sim-codec-config/: BROCHURE.md  Cargo.toml  README.md
crates/sim-codec-config/recipes/: book.toml
crates/sim-codec-config/recipes/01-basics/: chapter.toml
crates/sim-codec-config/src/: decode.rs  encode.rs  lib.rs  tests.rs  toml_lite.rs
crates/sim-codec-doc/: BROCHURE.md  Cargo.toml  README.md
crates/sim-codec-doc/recipes/: book.toml
crates/sim-codec-doc/recipes/01-basics/: chapter.toml
crates/sim-codec-doc/src/: asciidoc.rs  asciidoc_decoder.rs  asciidoc_support.rs  asciidoc_tests.rs  asciidoc_writer.rs  backend.rs  catalog.rs  catalog_tests.rs  codec.rs  document.rs  edit.rs  edit_tests.rs  functions.rs  latex.rs  latex_support.rs  latex_tests.rs  latex_writer.rs  lib.rs  markdown.rs  markdown_writer.rs  markup.rs  tests.rs  typst_backend.rs  typst_writer.rs
crates/sim-codec-doc/src/asciidoc_decoder/: inline.rs
crates/sim-codec-doc/src/markup/: decode.rs  expr.rs  model.rs
crates/sim-codec-doc/src/tests/: chunk.rs  support.rs
crates/sim-codec-doc/tests/: conformance.rs
crates/sim-codec-doc/tests/fixtures/: math-table.adoc  math-table.md  math-table.tex  math-table.typ  raw-preserve.adoc  raw-preserve.md  raw-preserve.tex  raw-preserve.typ  simple.adoc  simple.md  simple.tex  simple.typ
crates/sim-codec-index/: BROCHURE.md  Cargo.toml  README.md
crates/sim-codec-index/src/: error.rs  expr.rs  form.rs  grammar.rs  lib.rs  runtime.rs  tests.rs
crates/sim-codec-json/: BROCHURE.md  Cargo.toml  README.md
crates/sim-codec-json/recipes/: book.toml
crates/sim-codec-json/recipes/01-basics/: chapter.toml
crates/sim-codec-json/src/: codec.rs  expr_json.rs  grammar.rs  helpers.rs  lib.rs  projection.rs  schema.rs  tests.rs  tree_json.rs
crates/sim-codec-json/tests/: grammar_check_equivalence.rs
crates/sim-codec-lisp/: BROCHURE.md  Cargo.toml  README.md
crates/sim-codec-lisp/recipes/: book.toml
crates/sim-codec-lisp/recipes/01-basics/: chapter.toml
crates/sim-codec-lisp/recipes/02-loadable/: chapter.toml
crates/sim-codec-lisp/src/: grammar.rs  implementation.rs  lib.rs  loaders.rs  native.rs
crates/sim-codec-lisp/src/implementation/: cli.rs  decode.rs  encode.rs  forms.rs  lex.rs  runtime.rs  tests.rs  tree.rs
crates/sim-codec-lua/: BROCHURE.md  Cargo.toml  README.md
crates/sim-codec-lua/recipes/: book.toml
crates/sim-codec-lua/recipes/01-basics/: chapter.toml
crates/sim-codec-lua/src/: ast.rs  encode.rs  lex.rs  lib.rs  lower.rs  parse_block.rs  parse_expr.rs  pratt.rs  runtime.rs  tests.rs
crates/sim-codec-mcp/: BROCHURE.md  Cargo.toml  README.md
crates/sim-codec-mcp/recipes/: book.toml
crates/sim-codec-mcp/recipes/01-basics/: chapter.toml
crates/sim-codec-mcp/src/: canonical.rs  envelope.rs  error.rs  expr.rs  lib.rs  tests.rs  wire_keys.rs
crates/sim-codec-pratt/: BROCHURE.md  Cargo.toml  README.md
crates/sim-codec-pratt/recipes/: book.toml
crates/sim-codec-pratt/recipes/01-basics/: chapter.toml
crates/sim-codec-pratt/src/: builders.rs  lib.rs  parser.rs  tests.rs  token.rs
crates/sim-codec/recipes/: book.toml
crates/sim-codec/recipes/01-basics/: chapter.toml
crates/sim-codec/src/: grammar_check.rs  implementation.rs  lib.rs  prism.rs  runtime_api.rs
crates/sim-codec/src/implementation/: domain.rs  domain_form.rs  domain_form_tests.rs  limits.rs  (+6 more)
crates/sim-test-support/: BROCHURE.md  Cargo.toml  README.md
crates/sim-test-support/src/: lib.rs  number_domain.rs
crates/sim-wasm-abi/: BROCHURE.md  Cargo.toml  README.md
crates/sim-wasm-abi/src/: audio.rs  codec.rs  lib.rs  library.rs  model.rs  runtime.rs  types.rs
(+126 files in other folders)
