[package]
name = "sim-codec-algol"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "SIM workspace package for sim codec algol."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-codecs"
homepage = "https://github.com/sim-nest/sim-codecs"

[dependencies]
sim-codec = { version = "0.1.0", path = "../sim-codec" }
sim-codec-lisp = { version = "0.1.0", path = "../sim-codec-lisp" }
sim-kernel = { version = "0.1.0" }

[dev-dependencies]
sim-shape = { version = "0.1.0" }
sim-test-support = { version = "0.1.0", path = "../sim-test-support" }
