[package]
name = "sim-codec-binary-base64"
version = "0.1.3"
edition = "2024"
license = "MPL-2.0"
description = "SIM workspace package for sim codec binary base64."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-codecs"
homepage = "https://github.com/sim-nest/sim-codecs"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-codec = { version = "0.1.0", path = "../sim-codec" }
sim-codec-binary = { version = "0.1.0", path = "../sim-codec-binary" }
sim-kernel = { version = "0.1.0" }
sim-value = { version = "0.1.0" }

[dev-dependencies]
sim-test-support = { version = "0.1.0", path = "../sim-test-support" }

[lints]
workspace = true

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
