[package]
name = "sim-codec-bridge"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "BRIDGE packet line codec for SIM."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-codecs"
homepage = "https://github.com/sim-nest/sim-codecs"

[lib]
path = "src/lib.rs"

[dependencies]
serde_json = "1"
sim-codec = { version = "0.1.0", path = "../sim-codec" }
sim-codec-json = { version = "0.1.0", path = "../sim-codec-json" }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-value = { version = "0.1.0" }

[dev-dependencies]
sim-test-support = { version = "0.1.0", path = "../sim-test-support" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[lints]
workspace = true
