[package]
name = "sim-codec-chat"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Canonical chat transcript codec for SIM."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-codecs"
homepage = "https://github.com/sim-nest/sim-codecs"

[lib]
path = "src/lib.rs"

[dependencies]
serde_json = "1"
sim-codec = { version = "0.1.0", path = "../sim-codec" }
sim-codec-json = { version = "0.1.0", path = "../sim-codec-json" }
sim-kernel = { version = "0.1.0" }
sim-value = { version = "0.1.0" }

[dev-dependencies]
sim-codec-lisp = { version = "0.1.0", path = "../sim-codec-lisp" }
sim-test-support = { version = "0.1.0", path = "../sim-test-support" }

[lints]
workspace = true
