[package]
name = "sim-codec-compare"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
readme = "README.md"
description = "Developer harness comparing sim-codec-bitwise vs sim-codec-binary on size and speed."
repository = "https://github.com/sim-nest/sim-codecs"
homepage = "https://github.com/sim-nest/sim-codecs"
publish = false

[dependencies]
sim-kernel = { version = "0.1.0" }
sim-value = { version = "0.1.0" }
sim-codec-binary = { version = "0.1.0", path = "../sim-codec-binary" }
sim-codec-bitwise = { version = "0.1.0", path = "../sim-codec-bitwise" }

[[bin]]
name = "report"
path = "src/bin/report.rs"
