[package]
name = "sim-codec-doc"
version = "0.1.2"
edition = "2024"
license = "MPL-2.0"
description = "Markup document codec backends for SIM."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-codecs"
homepage = "https://github.com/sim-nest/sim-codecs"

[dependencies]
sim-codec = { version = "0.1.0", path = "../sim-codec" }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-value = { version = "0.1.0" }
pulldown-cmark = "0.13.4"
asciidork-ast = "0.38.0"
asciidork-parser = "0.38.1"
typst-syntax = "0.15.0"
tree-sitter = "0.25.10"
codebook-tree-sitter-latex = "0.6.1"

[dev-dependencies]
sim-codec-json = { version = "0.1.0", path = "../sim-codec-json" }
sim-codec-lisp = { version = "0.1.0", path = "../sim-codec-lisp" }
sim-test-support = { version = "0.1.0", path = "../sim-test-support" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
