[package]
name = "sim-codec-index"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "SIM Index codec for checked s-expression and JSON index graph forms."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-codecs"
homepage = "https://github.com/sim-nest/sim-codecs"

[package.metadata.sim-recipes]
policy = "rustdoc"
reason = "The index codec is taught through rustdoc examples and fail-closed tests."

[dependencies]
serde_json = "1"
sim-codec = { version = "0.1.0", path = "../sim-codec" }
sim-codec-json = { version = "0.1.2", path = "../sim-codec-json" }
sim-codec-lisp = { version = "0.1.1", path = "../sim-codec-lisp" }
sim-index-core = { version = "0.1.0", git = "https://github.com/sim-nest/sim-foundation", rev = "27e42f36387e785ceeaee188c0482301c2784401" }
sim-kernel = { version = "0.1.0" }

[dev-dependencies]
sim-test-support = { version = "0.1.0", path = "../sim-test-support" }

[lints]
workspace = true
