[package]
name = "sim-codec-json"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "SIM workspace package for sim codec json."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-codecs"
homepage = "https://github.com/sim-nest/sim-codecs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sim-codec = { version = "0.1.0", path = "../sim-codec" }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }

[dev-dependencies]
sim-test-support = { version = "0.1.0", path = "../sim-test-support" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
