[package]
name = "sim-codec-lisp"
version = "0.1.2"
edition = "2024"
license = "MPL-2.0"
description = "SIM workspace package for sim codec lisp."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-codecs"
homepage = "https://github.com/sim-nest/sim-codecs"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
native-export = [
    "dep:sim-codec-binary",
    "dep:sim-lib-numbers-f64",
    "dep:sim-macros",
]

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
sim-codec = { version = "0.1.0", path = "../sim-codec" }
sim-codec-binary = { version = "0.1.0", path = "../sim-codec-binary", optional = true }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-numbers-f64 = { version = "0.1.0", optional = true }
sim-macros = { version = "0.1.0", optional = true }
sim-shape = { version = "0.1.2" }

[dev-dependencies]
sim-kernel = { version = "0.1.0", features = ["test-support"] }
sim-test-support = { version = "0.1.0", path = "../sim-test-support" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
