[package]
name = "sim-codec-lua"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Lua chunk codec with expression, located, and tree round-trip lanes."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-codecs"
homepage = "https://github.com/sim-nest/sim-codecs"

[dependencies]
sim-codec = { version = "0.1.4", path = "../sim-codec" }
sim-codec-pratt = { version = "0.1.1", path = "../sim-codec-pratt" }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[dev-dependencies]
sim-test-support = { version = "0.1.0", path = "../sim-test-support" }
