[package]
name = "sim-codec-mcp"
version = "0.1.2"
edition = "2024"
license = "MPL-2.0"
description = "MCP JSON-RPC envelope codec for SIM."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-codecs"
homepage = "https://github.com/sim-nest/sim-codecs"

[lib]
path = "src/lib.rs"

[dependencies]
sim-cookbook = { version = "0.1.0" }
serde = "1"
serde_json = "1"
sim-citizen = { version = "0.1.0" }
sim-citizen-derive = { version = "0.1.0" }
sim-codec = { version = "0.1.0", path = "../sim-codec" }
sim-codec-json = { version = "0.1.0", path = "../sim-codec-json" }
sim-kernel = { version = "0.1.0" }
sim-value = { version = "0.1.0" }

[dev-dependencies]
sim-test-support = { version = "0.1.0", path = "../sim-test-support" }

[lints]
workspace = true

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
