[package]
name = "sim-codec"
version = "0.1.4"
edition = "2024"
license = "MPL-2.0"
description = "SIM workspace package for sim codec."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-codecs"
homepage = "https://github.com/sim-nest/sim-codecs"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-citizen-derive = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }

[dev-dependencies]
sim-shape = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
